> Added smooth movement of category tabs into top when scroll down
> Added marquee effect on the button "Chat with Jaymantrix AI"

Jan 07, 2026
> Added Vercel Web Analytics
> Changed the structure into React like Vite for routing.
> Adjust BG color on user chat bubbles and chat input

Jan 08, 2026
> Now supported routing link like "/notes" and "/chat"

Jan 09, 2026
> Added vertical marquee design text on both left and right on the website
> Added 10 more API key (20 total)
> Added send sound effect to the AI message
> Adjust slightly on bg color into linear gradient on content
> Redesign note section
> Added smooth ease out of entering each sections
> Fixed AI not response time on 12hrs format

Jan 10, 2026
> Added page "Game Records" to show my game status. The design and function is still WIP
> Jaymantrix AI will start message if it's on the chat section instead of initialize website from the start
> Changed smooth entrance animation
> Can now search filter on the Game Record (No search result display coming soon...)
> min-height .content-wrapper is now 78vh

Jan 11, 2026
> Added loading screen at the start of opening the website
> Changed header logo and retweak design
> Adjust keyboard behavior on chat Jaymantrix AI on mobile
> Change dark blue theme scrollbar
> Added depth text with px measurement on the bottom left while scroll up and down
> Added black gradient below the screen if it's depth

Jan 12, 2026
> The website will perform initialization if the loading is done
> Fade out bottom black gradient when depth is below 50px
> Small changes on header and footer design and retweak some design
> Adjust .content-wrapper min-height from 78vh to 80vh
> Game list updated (Hyperdimension Neptunia Re;Birth1 img) and 1 unknown game got fixed
> Fixed fast-refresh vite
> Added function to prevent user from spamming sending message to Jaymantrix AI while thinking
> Changed Jaymantrix Logo

Jan 18, 2026
> Remove draggable img from "Game Record section" and redesign